# llm-code-review-assistant

./: .env.example  .gitignore  README.md  design.md  prd.md  pyproject.toml  techstack.md
alembic/: env.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
scripts/: run_review_test.py
src/app/: config.py  main.py
src/app/api/: ingest.py  review.py  webhook.py
src/app/core/: diff_parser.py  llm_client.py  prompt_builder.py  response_parser.py
src/app/github/: client.py  webhook.py
src/app/models/: db.py
src/app/rag/: embedder.py  retriever.py
src/app/schemas/: review.py
src/app/workers/: review_worker.py
tests/: test_review_api.py
