[project]
name = "code-review-assistant"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.*",
    "uvicorn[standard]==0.29.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "python-dotenv==1.*",
    "openai==1.*",
    "langchain-core==0.2.*",
    "tiktoken==0.7.*",
    "unidiff==0.7.*",
    "pygments==2.*",
    "chromadb==0.5.*",
    "sentence-transformers==3.*",
    "langchain-text-splitters==0.2.*",
    "PyGithub==2.*",
    "httpx==0.27.*",
    "celery==5.*",
    "redis==5.*",
    "flower==2.*",
    "sqlalchemy==2.*",
    "alembic==1.*",
    "asyncpg==0.29.*",
    "structlog==24.*",
    "prometheus-fastapi-instrumentator==6.*",
    "sentry-sdk[fastapi]==2.*",
]
[project.optional-dependencies]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==5.*",
    "respx==0.21.*",
    "factory-boy==3.*",
    "ruff==0.4.*",
    "mypy==1.*",
    "pre-commit==3.*",
]
